@@ -1,10 +1,18 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0104
+// generated by Fast Light User Interface Designer (fluid) version 1.0106
 
 #include "widget_panel.h"
 
 static void cb_(Fl_Tabs* o, void* v) {
   propagate_load((Fl_Group *)o,v);
 }
+
+Fl_Value_Input *widget_x_input=(Fl_Value_Input *)0;
+
+Fl_Value_Input *widget_y_input=(Fl_Value_Input *)0;
+
+Fl_Value_Input *widget_w_input=(Fl_Value_Input *)0;
+
+Fl_Value_Input *widget_h_input=(Fl_Value_Input *)0;
 
 Fl_Input *v_input[4]={(Fl_Input *)0};
 
@@ -89,31 +97,31 @@ Fl_Double_Window* make_widget_panel() {
             { Fl_Button* o = new Fl_Button(295, 115, 20, 20, "@-1<-");
               o->tooltip("Left-align the label.");
               o->type(1);
-              o->labelcolor(8);
+              o->labelcolor(FL_INACTIVE_COLOR);
               o->callback((Fl_Callback*)align_cb, (void*)(FL_ALIGN_LEFT));
             }
             { Fl_Button* o = new Fl_Button(315, 115, 20, 20, "@-1->");
               o->tooltip("Right-align the label.");
               o->type(1);
-              o->labelcolor(8);
+              o->labelcolor(FL_INACTIVE_COLOR);
               o->callback((Fl_Callback*)align_cb, (void*)(FL_ALIGN_RIGHT));
             }
             { Fl_Button* o = new Fl_Button(335, 115, 20, 20, "@-18");
               o->tooltip("Top-align the label.");
               o->type(1);
-              o->labelcolor(8);
+              o->labelcolor(FL_INACTIVE_COLOR);
               o->callback((Fl_Callback*)align_cb, (void*)(FL_ALIGN_TOP));
             }
             { Fl_Button* o = new Fl_Button(355, 115, 20, 20, "@-12");
               o->tooltip("Bottom-align the label.");
               o->type(1);
-              o->labelcolor(8);
+              o->labelcolor(FL_INACTIVE_COLOR);
               o->callback((Fl_Callback*)align_cb, (void*)(FL_ALIGN_BOTTOM));
             }
             { Fl_Button* o = new Fl_Button(375, 115, 20, 20, "@-3square");
               o->tooltip("Show the label inside the widget.");
               o->type(1);
-              o->labelcolor(8);
+              o->labelcolor(FL_INACTIVE_COLOR);
               o->callback((Fl_Callback*)align_cb, (void*)(FL_ALIGN_INSIDE));
             }
             { Fl_Box* o = new Fl_Box(256, 116, 20, 20);
@@ -121,7 +129,7 @@ Fl_Double_Window* make_widget_panel() {
             }
             o->end();
           }
-          { Fl_Value_Input* o = new Fl_Value_Input(95, 150, 60, 20, "X:");
+          { Fl_Value_Input* o = widget_x_input = new Fl_Value_Input(95, 150, 60, 20, "X:");
             o->tooltip("The X position of the widget.");
             o->labelsize(10);
             o->maximum(2048);
@@ -132,7 +140,7 @@ Fl_Double_Window* make_widget_panel() {
           { Fl_Box* o = new Fl_Box(95, 150, 0, 20, "Position:");
             o->align(FL_ALIGN_RIGHT|FL_ALIGN_INSIDE);
           }
-          { Fl_Value_Input* o = new Fl_Value_Input(155, 150, 60, 20, "Y:");
+          { Fl_Value_Input* o = widget_y_input = new Fl_Value_Input(155, 150, 60, 20, "Y:");
             o->tooltip("The Y position of the widget.");
             o->labelsize(10);
             o->maximum(2048);
@@ -140,7 +148,7 @@ Fl_Double_Window* make_widget_panel() {
             o->callback((Fl_Callback*)y_cb);
             o->align(FL_ALIGN_TOP_LEFT);
           }
-          { Fl_Value_Input* o = new Fl_Value_Input(215, 150, 60, 20, "Width:");
+          { Fl_Value_Input* o = widget_w_input = new Fl_Value_Input(215, 150, 60, 20, "Width:");
             o->tooltip("The width of the widget.");
             o->labelsize(10);
             o->maximum(2048);
@@ -148,7 +156,7 @@ Fl_Double_Window* make_widget_panel() {
             o->callback((Fl_Callback*)w_cb);
             o->align(FL_ALIGN_TOP_LEFT);
           }
-          { Fl_Value_Input* o = new Fl_Value_Input(275, 150, 60, 20, "Height:");
+          { Fl_Value_Input* o = widget_h_input = new Fl_Value_Input(275, 150, 60, 20, "Height:");
             o->tooltip("The height of the widget.");
             o->labelsize(10);
             o->maximum(2048);
@@ -194,12 +202,12 @@ Fl_Double_Window* make_widget_panel() {
           { Shortcut_Button* o = new Shortcut_Button(95, 210, 300, 20, "Shortcut:");
             o->tooltip("The shortcut key for the widget.");
             o->box(FL_DOWN_BOX);
-            o->color(7);
-            o->selection_color(7);
+            o->color(FL_BACKGROUND2_COLOR);
+            o->selection_color(FL_BACKGROUND2_COLOR);
             o->labeltype(FL_NORMAL_LABEL);
             o->labelfont(0);
             o->labelsize(14);
-            o->labelcolor(56);
+            o->labelcolor(FL_BLACK);
             o->callback((Fl_Callback*)shortcut_in_cb);
             o->align(FL_ALIGN_LEFT);
             o->when(FL_WHEN_RELEASE);
@@ -213,19 +221,19 @@ Fl_Double_Window* make_widget_panel() {
             }
             { Fl_Light_Button* o = new Fl_Light_Button(210, 235, 60, 20, "Border");
               o->tooltip("Add a border around the window.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)border_cb);
             }
             { Fl_Light_Button* o = new Fl_Light_Button(270, 235, 55, 20, "Modal");
               o->tooltip("Make the window modal.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)modal_cb);
             }
             { Fl_Light_Button* o = new Fl_Light_Button(325, 235, 70, 20, "Nonmodal");
               o->tooltip("Make the window non-modal.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(9);
               o->callback((Fl_Callback*)non_modal_cb);
               o->align(132|FL_ALIGN_INSIDE);
@@ -236,7 +244,7 @@ Fl_Double_Window* make_widget_panel() {
             o->callback((Fl_Callback*)propagate_load);
             { Fl_Light_Button* o = new Fl_Light_Button(95, 260, 70, 20, "Visible");
               o->tooltip("Show the widget.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)visible_cb);
             }
@@ -245,20 +253,20 @@ Fl_Double_Window* make_widget_panel() {
             }
             { Fl_Light_Button* o = new Fl_Light_Button(165, 260, 70, 20, "Active");
               o->tooltip("Activate the widget.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)active_cb);
             }
             { Fl_Light_Button* o = new Fl_Light_Button(235, 260, 70, 20, "Resizable");
               o->tooltip("Make the widget resizable.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)resizable_cb);
               o->when(FL_WHEN_CHANGED);
             }
             { Fl_Light_Button* o = new Fl_Light_Button(305, 260, 70, 20, "Hotspot");
               o->tooltip("Center the window under this widget.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)hotspot_cb);
               o->when(FL_WHEN_CHANGED);
@@ -411,7 +419,7 @@ Fl_Double_Window* make_widget_panel() {
             }
             { Fl_Light_Button* o = new Fl_Light_Button(330, 65, 65, 20, "public");
               o->tooltip("Make the widget publicly accessible.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)name_public_cb);
               o->when(FL_WHEN_CHANGED);
@@ -486,7 +494,7 @@ Fl_Double_Window* make_widget_panel() {
             }
             { Fl_Light_Button* o = new Fl_Light_Button(290, 295, 105, 20, "No Change");
               o->tooltip("Call the callback even if the value has not changed.");
-              o->selection_color(1);
+              o->selection_color((Fl_Color)1);
               o->labelsize(10);
               o->callback((Fl_Callback*)when_button_cb);
             }
@@ -509,7 +517,7 @@ Fl_Double_Window* make_widget_panel() {
       }
       { Fl_Button* o = new Fl_Button(215, 335, 100, 25, "No &Overlay");
         o->tooltip("Hide the widget overlay box.");
-        o->labelcolor(1);
+        o->labelcolor((Fl_Color)1);
         o->callback((Fl_Callback*)overlay_cb);
       }
       { Fl_Button* o = new Fl_Button(155, 335, 80, 25, "Revert");
